--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
+    "@mui/x-data-grid": "^7.3.1",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "mui": "^0.0.1",
@@ -20,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-router": "^6.23.0",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "react-test-renderer": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
